--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.rabbitmq.port=${RABBIT_PORT:5672}
 spring.rabbitmq.password=${RABBIT_PASSWORD:guest}
 spring.rabbitmq.username=${RABBIT_USER:guest}
 
+url.erp=${ERP_URL:http://localhost}
+
 queue.pedidos.registrados=lanchonete.customer-totem.pedidos.registrados
 queue.pedidos.confirmados=lanchonete.payment-service.pedidos.confirmados
